tests/l3_l7_x5_output.txt
Running 15 tests (L3-L7) x 5 iterations = 75 total runs


================================================================================
ITERATION 1/5
================================================================================

Running L3-1: Refactor to Class...

======================================================================
Running L3-1: Refactor to Class
Task: Create calculator.py with add, subtract, multiply functions. Then refactor it to use a Calculator class with methods instead of standalone functions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 26.9s - 6 rounds
  ✓ PASS (6 rounds, 26.9s)
Running L3-2: Fix Buggy Code...

======================================================================
Running L3-2: Fix Buggy Code
Task: Fix all the bugs in buggy.py and make sure it runs without errors
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 40.5s - 11 rounds
Failure mode: infinite_loop
  ✗ FAIL (11 rounds, 40.5s)
Running L3-3: Add Feature to Package...

======================================================================
Running L3-3: Add Feature to Package
Task: Add a square_root function to mathx/advanced.py and add tests for it in tests/test_mathx.py. Make sure all existing tests still pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 171.6s - 25 rounds
Failure mode: infinite_loop
  ✗ FAIL (25 rounds, 171.6s)
Running L4-1: TodoList with Persistence...

======================================================================
Running L4-1: TodoList with Persistence
Task: Create a TodoList class in todo.py with methods: add_task, remove_task, mark_complete, list_pending, save_to_file, and load_from_file. Use JSON for persistence. Include tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .age
✗ FAIL -
✓ PASS - 164.1s - 43 rounds
  ✓ PASS (43 rounds, 164.1s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 11.3s - 6 rounds
Failure mode: unknown_failure
  ✗ FAIL (6 rounds, 11.3s)
Running L4-3: Optimize Slow Code
✓ PASS - 106.2s - 29 rounds
  ✓ PASS (29 rounds, 106.2s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 38.9s - 6 rounds
Failure mode: unknown_failure
  ✗ FAIL (6 rounds, 38.9s)
Running L4-3: Optimize Slow Code...

======================================================================
Running L4-3: Optimize Slow Code
Task: The fibonacci function in slow_fib.py is very slow. Optimize it using memoization or dynamic programming to make it faster.
========================================================
✗ FAIL - 360.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.0s)
Running L5-2: Large-Scale Refactoring...

======================================================================
Running L5-2: Large-Scale Refactoring
Task: Refactor the entire mathx package to use a unified MathOperation base class that all operations inherit from. Maintain all existing functionality and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 134.8s - 38 rounds
Failure mode: infinite_loop
  ✗ FAIL (38 rounds, 134.8s)
Running L5-3: Ambiguous Requirements...

======================================================================
Running L5-3: Ambiguous Requirements
Task: Create a useful utility for working with text files
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 118.5s - 18 rounds
  ✓ PASS (18 rounds, 118.5s)
Running L6-1: Web API with Tests...

======================================================================
Running L6-1: Web API with Tests
Task: Create a simple REST API using Flask with endpoints for creating, reading, updating, and deleting items. Include comprehensive tests using pytest. Setup with proper error handling and validation.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 420.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 420s
  ✗ FAIL (0 rounds, 420.0s)
Running L6-2: Plugin System Architecture...

======================================================================
Running L6-2: Plugin System Architecture
Task: Design and implement a plugin system where plugins can be dynamically loaded from a plugins/ directory. Each plugin should implement a common interface. Include example plugins and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 420.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 420s
  ✗ FAIL (0 rounds, 420.0s)
Running L6-3: Legacy Code Migration...

======================================================================
Running L6-3: Legacy Code Migration
Task: Migrate the old_codebase.py from Python 2 style to modern Python 3 with type hints, pathlib instead of os.path, and f-strings. Add tests to ensure behavior is preserved.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 86.4s - 11 rounds
  ✓ PASS (11 rounds, 86.4s)
Running L7-1: Multi-Module Dependency Resolution...

======================================================================
Running L7-1: Multi-Module Dependency Resolution
Task: Create a package manager simulation with modules A, B, C where B depends on A v1.x, C depends on A v2.x. Implement version resolution logic to detect conflicts and suggest solutions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 480.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 480s
  ✗ FAIL (0 rounds, 480.0s)
Running L7-2: Concurrent Task Queue...

======================================================================
Running L7-2: Concurrent Task Queue
Task: Build a thread-safe task queue system with worker threads, priority levels, retry logic on failure, and graceful shutdown. Include comprehensive tests for concurrency edge cases.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 53.1s - 15 rounds
  ✓ PASS (15 rounds, 53.1s)
Running L7-3: DSL Parser and Interpreter...

======================================================================
Running L7-3: DSL Parser and Interpreter
Task: Design a simple domain-specific language (DSL) for mathematical expressions with variables, functions (sin, cos, sqrt), and implement a parser and interpreter. Include tests for complex expressions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 224.5s - 38 rounds
Failure mode: infinite_loop
  ✗ FAIL (38 rounds, 224.5s)

================================================================================
ITERATION 2/5
================================================================================

Running L3-1: Refactor to Class...

======================================================================
Running L3-1: Refactor to Class
Task: Create calculator.py with add, subtract, multiply functions. Then refactor it to use a Calculator class with methods instead of standalone functions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 19.7s - 7 rounds
  ✓ PASS (7 rounds, 19.7s)
Running L3-2: Fix Buggy Code...

======================================================================
Running L3-2: Fix Buggy Code
Task: Fix all the bugs in buggy.py and make sure it runs without errors
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 240.1s - 0 rounds
Failure mode: timeout
Error: Timeout after 240s
  ✗ FAIL (0 rounds, 240.1s)
Running L3-3: Add Feature to Package...

======================================================================
Running L3-3: Add Feature to Package
Task: Add a square_root function to mathx/advanced.py and add tests for it in tests/test_mathx.py. Make sure all existing tests still pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 240.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 240s
  ✗ FAIL (0 rounds, 240.0s)
Running L4-1: TodoList with Persistence...

======================================================================
Running L4-1: TodoList with Persistence
Task: Create a TodoList class in todo.py with methods: add_task, remove_task, mark_complete, list_pending, save_to_file, and load_from_file. Use JSON for persistence. Include tests.
======================================================================

[cleanup] Removed .agent_workspace
[clean
✗ FAIL - 240.1s - 0 roun
✗ FAIL - 300.1s - 0 rounds
Failure mode: timeout
Error: Timeout after 300s
  ✗ FAIL (0 rounds, 300.1s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 20.4s - 6 rounds
Failure mode: unknown_failure
✗ FAIL - 300.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 300s
  ✗ FAIL (0 rounds, 300.0s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 18.8s - 8 rounds
  ✓ PASS (8 rounds, 18.8s)
Running L4-3: Optimize Slow Code...

======================================================================
Running L4-3: Optimize Slow Code
Task: The fibonacci function in slow_fib.py is very slow. Optimize it using memoization or dynamic programming to make it faster.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 22.4s - 6 rounds
  ✓ PASS (6 rounds, 22.4s)
Running L5-1: Multi-Format Data Pipeline...

======================================================================
Running L5-1: Multi-Format Data Pipeline
Task: Create a data processing module that can read CSV, JSON, and XML files and convert between formats. Include a unified interface.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 185.9s - 47 rounds
  ✓ PASS (47 rounds, 185.9s)
Running L5-2: Large-Scale Refactoring...

======================================================================
Running L5-2: Large-Scale Refactoring
Task: Refactor the entire mathx package to use a unified MathOperation base class that all operations inherit from. Maintain all existing functionality and tests.
===============
✓ PASS - 283.7s - 78 rounds
  ✓ PASS (78 rounds, 283.7s)
Running L6-1: Web API with Tests...

==========================
✗ FAIL - 360.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.0s)
Running L5-3: Ambiguous Requirements...

======================================================================
Running L5-3: Ambiguous Requirements
Task: Create a useful utility for working with text files
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 27.9s - 9 rounds
  ✓ PASS (9 rounds, 27.9s)
Running L6-1: Web API with Tests...

======================================================================
Running L6-1: Web API with Tests
Task: Create a simple REST API using Flask with endpoints for creating, reading, updating, and deleting items. Include comprehensive tests using pytest. Setup with proper error handling and validation.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] 
✗ FAIL - 420.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 420s
  ✗ FAIL (0 rounds, 420.0s)
Running L6-3: Legacy Code Migration...

======================================================================
Running L6-3: Legacy Code Migration
Task: Migrate the old_codebase.py from Python 2 style to modern Python 3 with type hints, pathlib instead of os.path, and f-strings. Add tests to ensure behavior is preserved.
======================================================================

[cleanup] Removed .agent_workspace
Traceback (most recent call last):
  File "/workspace/tests/run_l3_l7_x5.py", line 26, in <module>
    result = run_test(test)
             ^^^^^^^^^^^^^^
  File "/workspace/tests/run_stress_tests.py", line 438, in run_test
    clean_workspace()
  File "/workspace/tests/run_stress_tests.py", line 382, in clean_workspace
    shutil.rmtree(".agent_context")
  File "/usr/local/lib/python3.11/shutil.py", line 763, in rmtree
    onerror(os.rmdir, path, sys.exc_info())
  File "/usr/local/lib/python3.11/shutil.py", line 761, in rmtree
    os.rmdir(path, dir_fd=dir_fd)
OSError: [Errno 39] D
✓ PASS - 36.2s - 19 rounds
  ✓ PASS (19 rounds, 36.2s)
Running L7-1: Multi-Module Dependency Resolution...

======================================================================
Running L7-1: Multi-Module Dependency Resolution
Task: Create a package manager simulation with modules A, B, C where B depends on A v1.x, C depends on A v2.x. Implement version resolution logic to detect conflicts and suggest solutions.
======================================================================

[cleanup] Removed .agent_context

✓ PASS - 36.5s - 18 rounds
  ✓ PASS (18 rounds, 36.5s)
Running L7-2: Concurrent Task Queue...

======================================================================
Running L7-2: Concurrent Task Queue
Task: Build a thread-safe task queue system with worker threads, priority levels, retry logic on failure, and graceful shutdown. Include comprehensive tests for concurrency edge cases.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 365.5s - 109 rounds
  ✓ PASS (109 rounds, 365.5s)
Running L7-3: DSL Parser and Interpreter...

======================================================================
Running L7-3: DSL Parser and Interpreter
Task: Design a simple domain-specific language (DSL) for mathematical expressions with variables, functions (sin, cos, sqrt), and implement a parser and interpreter. Include tests for complex expressions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 540.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 540s
  ✗ FAIL (0 rounds, 540.0s)

================================================================================
ITERATION 3/5
================================================================================

Running L3-1: Refactor to Class...

======================================================================
Running L3-1: Refactor to Class
Task: Create calculator.py with add, subtract, multiply functions. Then refactor it to use a Calculator class with methods instead of standalone functions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 42.3s - 6 rounds
  ✓ PASS (6 rounds, 42.3s)
Running L3-2: Fix Buggy Code...

======================================================================
Running L3-2: Fix Buggy Code
Task: Fix all the bugs in buggy.py and make sure it runs without errors
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 126.9s - 12 rounds
  ✓ PASS (12 rounds, 126.9s)
Running L3-3: Add Feature to Package...

======================================================================
Running L3-3: Add Feature to Package
Task: Add a square_root function to mathx/advanced.py and add tests for it in tests/test_mathx.py. Make sure all existing tests still pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 178.4s - 58 rounds
  ✓ PASS (58 rounds, 178.4s)
Running L4-1: TodoList with Persistence...

======================================================================
Running L4-1: TodoList with Persistence
Task: Create a TodoList class in todo.py with methods: add_task, remove_task, mark_complete, list_pending, save_to_file, and load_from_file. Use JSON for persistence. Include tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 300.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 300s
  ✗ FAIL (0 rounds, 300.0s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 22.7s - 7 rounds
  ✓ PASS (7 rounds, 22.7s)
Running L4-3: Optimize Slow Code...

======================================================================
Running L4-3: Optimize Slow Code
Task: The fibonacci function in slow_fib.py is very slow. Optimize it using memoization or dynamic programming to make it faster.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 90.1s - 7 rounds
  ✓ PASS (7 rounds, 90.1s)
Running L5-1: Multi-Format Data Pipeline...

======================================================================
Running L5-1: Multi-Format Data Pipeline
Task: Create a data processing module that can read CSV, JSON, and XML files and convert between formats. Include a unified interface.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 360.1s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.1s)
Running L5-2: Large-Scale Refactoring...

======================================================================
Running L5-2: Large-Scale Refactoring
Task: Refactor the entire mathx package to use a unified MathOperation base class that all operations inherit from. Maintain all existing functionality and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 20.9s - 2 rounds
Failure mode: unknown_failure
  ✗ FAIL (2 rounds, 20.9s)
Running L5-3: Ambiguous Requirements...

======================================================================
Running L5-3: Ambiguous Requirements
Task: Create a useful utility for working with text files
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 34.7s - 2 rounds
Failure mode: unknown_failure
  ✗ FAIL (2 rounds, 34.7s)
Running L6-1: Web API with Tests...

======================================================================
Running L6-1: Web API with Tests
Task: Create a simple REST API using Flask with endpoints for creating, reading, updating, and deleting items. Include comprehensive tests using pytest. Setup with proper error handling and validation.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 420.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 420s
  ✗ FAIL (0 rounds, 420.0s)
Running L6-2: Plugin System Architecture...

======================================================================
Running L6-2: Plugin System Architecture
Task: Design and implement a plugin system where plugins can be dynamically loaded from a plugins/ directory. Each plugin should implement a common interface. Include example plugins and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 408.6s - 85 rounds
  ✓ PASS (85 rounds, 408.6s)
Running L6-3: Legacy Code Migration...

======================================================================
Running L6-3: Legacy Code Migration
Task: Migrate the old_codebase.py from Python 2 style to modern Python 3 with type hints, pathlib instead of os.path, and f-strings. Add tests to ensure behavior is preserved.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 141.0s - 17 rounds
  ✓ PASS (17 rounds, 141.0s)
Running L7-1: Multi-Module Dependency Resolution...

======================================================================
Running L7-1: Multi-Module Dependency Resolution
Task: Create a package manager simulation with modules A, B, C where B depends on A v1.x, C depends on A v2.x. Implement version resolution logic to detect conflicts and suggest solutions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 185.9s - 43 rounds
  ✓ PASS (43 rounds, 185.9s)
Running L7-2: Concurrent Task Queue...

======================================================================
Running L7-2: Concurrent Task Queue
Task: Build a thread-safe task queue system with worker threads, priority levels, retry logic on failure, and graceful shutdown. Include comprehensive tests for concurrency edge cases.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 215.2s - 56 rounds
  ✓ PASS (56 rounds, 215.2s)
Running L7-3: DSL Parser and Interpreter...

======================================================================
Running L7-3: DSL Parser and Interpreter
Task: Design a simple domain-specific language (DSL) for mathematical expressions with variables, functions (sin, cos, sqrt), and implement a parser and interpreter. Include tests for complex expressions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 69.8s - 3 rounds
Failure mode: unknown_failure
  ✗ FAIL (3 rounds, 69.8s)

================================================================================
ITERATION 4/5
================================================================================

Running L3-1: Refactor to Class...

======================================================================
Running L3-1: Refactor to Class
Task: Create calculator.py with add, subtract, multiply functions. Then refactor it to use a Calculator class with methods instead of standalone functions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 79.6s - 12 rounds
  ✓ PASS (12 rounds, 79.6s)
Running L3-2: Fix Buggy Code...

======================================================================
Running L3-2: Fix Buggy Code
Task: Fix all the bugs in buggy.py and make sure it runs without errors
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 210.8s - 5 rounds
  ✓ PASS (5 rounds, 210.8s)
Running L3-3: Add Feature to Package...

======================================================================
Running L3-3: Add Feature to Package
Task: Add a square_root function to mathx/advanced.py and add tests for it in tests/test_mathx.py. Make sure all existing tests still pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 165.9s - 28 rounds
  ✓ PASS (28 rounds, 165.9s)
Running L4-1: TodoList with Persistence...

======================================================================
Running L4-1: TodoList with Persistence
Task: Create a TodoList class in todo.py with methods: add_task, remove_task, mark_complete, list_pending, save_to_file, and load_from_file. Use JSON for persistence. Include tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 54.5s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 54.5s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 28.9s - 9 rounds
  ✓ PASS (9 rounds, 28.9s)
Running L4-3: Optimize Slow Code...

======================================================================
Running L4-3: Optimize Slow Code
Task: The fibonacci function in slow_fib.py is very slow. Optimize it using memoization or dynamic programming to make it faster.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 147.8s - 19 rounds
  ✓ PASS (19 rounds, 147.8s)
Running L5-1: Multi-Format Data Pipeline...

======================================================================
Running L5-1: Multi-Format Data Pipeline
Task: Create a data processing module that can read CSV, JSON, and XML files and convert between formats. Include a unified interface.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 63.0s - 3 rounds
Failure mode: unknown_failure
  ✗ FAIL (3 rounds, 63.0s)
Running L5-2: Large-Scale Refactoring...

======================================================================
Running L5-2: Large-Scale Refactoring
Task: Refactor the entire mathx package to use a unified MathOperation base class that all operations inherit from. Maintain all existing functionality and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 360.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.0s)
Running L5-3: Ambiguous Requirements...

======================================================================
Running L5-3: Ambiguous Requirements
Task: Create a useful utility for working with text files
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 60.2s - 11 rounds
  ✓ PASS (11 rounds, 60.2s)
Running L6-1: Web API with Tests...

======================================================================
Running L6-1: Web API with Tests
Task: Create a simple REST API using Flask with endpoints for creating, reading, updating, and deleting items. Include comprehensive tests using pytest. Setup with proper error handling and validation.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 60.1s - 3 rounds
  ✓ PASS (3 rounds, 60.1s)
Running L6-2: Plugin System Architecture...

======================================================================
Running L6-2: Plugin System Architecture
Task: Design and implement a plugin system where plugins can be dynamically loaded from a plugins/ directory. Each plugin should implement a common interface. Include example plugins and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 269.7s - 37 rounds
  ✓ PASS (37 rounds, 269.7s)
Running L6-3: Legacy Code Migration...

======================================================================
Running L6-3: Legacy Code Migration
Task: Migrate the old_codebase.py from Python 2 style to modern Python 3 with type hints, pathlib instead of os.path, and f-strings. Add tests to ensure behavior is preserved.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 360.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.0s)
Running L7-1: Multi-Module Dependency Resolution...

======================================================================
Running L7-1: Multi-Module Dependency Resolution
Task: Create a package manager simulation with modules A, B, C where B depends on A v1.x, C depends on A v2.x. Implement version resolution logic to detect conflicts and suggest solutions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 178.7s - 32 rounds
  ✓ PASS (32 rounds, 178.7s)
Running L7-2: Concurrent Task Queue...

======================================================================
Running L7-2: Concurrent Task Queue
Task: Build a thread-safe task queue system with worker threads, priority levels, retry logic on failure, and graceful shutdown. Include comprehensive tests for concurrency edge cases.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 127.6s - 20 rounds
  ✓ PASS (20 rounds, 127.6s)
Running L7-3: DSL Parser and Interpreter...

======================================================================
Running L7-3: DSL Parser and Interpreter
Task: Design a simple domain-specific language (DSL) for mathematical expressions with variables, functions (sin, cos, sqrt), and implement a parser and interpreter. Include tests for complex expressions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 59.6s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 59.6s)

================================================================================
ITERATION 5/5
================================================================================

Running L3-1: Refactor to Class...

======================================================================
Running L3-1: Refactor to Class
Task: Create calculator.py with add, subtract, multiply functions. Then refactor it to use a Calculator class with methods instead of standalone functions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 54.2s - 9 rounds
  ✓ PASS (9 rounds, 54.2s)
Running L3-2: Fix Buggy Code...

======================================================================
Running L3-2: Fix Buggy Code
Task: Fix all the bugs in buggy.py and make sure it runs without errors
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 240.1s - 0 rounds
Failure mode: timeout
Error: Timeout after 240s
  ✗ FAIL (0 rounds, 240.1s)
Running L3-3: Add Feature to Package...

======================================================================
Running L3-3: Add Feature to Package
Task: Add a square_root function to mathx/advanced.py and add tests for it in tests/test_mathx.py. Make sure all existing tests still pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 240.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 240s
  ✗ FAIL (0 rounds, 240.0s)
Running L4-1: TodoList with Persistence...

======================================================================
Running L4-1: TodoList with Persistence
Task: Create a TodoList class in todo.py with methods: add_task, remove_task, mark_complete, list_pending, save_to_file, and load_from_file. Use JSON for persistence. Include tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 300.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 300s
  ✗ FAIL (0 rounds, 300.0s)
Running L4-2: Debug Failing Tests...

======================================================================
Running L4-2: Debug Failing Tests
Task: The tests in test_broken.py are failing. Debug the code in broken.py and fix all issues so tests pass.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 26.7s - 7 rounds
  ✓ PASS (7 rounds, 26.7s)
Running L4-3: Optimize Slow Code...

======================================================================
Running L4-3: Optimize Slow Code
Task: The fibonacci function in slow_fib.py is very slow. Optimize it using memoization or dynamic programming to make it faster.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 252.5s - 38 rounds
  ✓ PASS (38 rounds, 252.5s)
Running L5-1: Multi-Format Data Pipeline...

======================================================================
Running L5-1: Multi-Format Data Pipeline
Task: Create a data processing module that can read CSV, JSON, and XML files and convert between formats. Include a unified interface.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 56.4s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 56.4s)
Running L5-2: Large-Scale Refactoring...

======================================================================
Running L5-2: Large-Scale Refactoring
Task: Refactor the entire mathx package to use a unified MathOperation base class that all operations inherit from. Maintain all existing functionality and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 360.0s - 0 rounds
Failure mode: timeout
Error: Timeout after 360s
  ✗ FAIL (0 rounds, 360.0s)
Running L5-3: Ambiguous Requirements...

======================================================================
Running L5-3: Ambiguous Requirements
Task: Create a useful utility for working with text files
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 57.2s - 3 rounds
  ✓ PASS (3 rounds, 57.2s)
Running L6-1: Web API with Tests...

======================================================================
Running L6-1: Web API with Tests
Task: Create a simple REST API using Flask with endpoints for creating, reading, updating, and deleting items. Include comprehensive tests using pytest. Setup with proper error handling and validation.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 149.6s - 59 rounds
  ✓ PASS (59 rounds, 149.6s)
Running L6-2: Plugin System Architecture...

======================================================================
Running L6-2: Plugin System Architecture
Task: Design and implement a plugin system where plugins can be dynamically loaded from a plugins/ directory. Each plugin should implement a common interface. Include example plugins and tests.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✓ PASS - 98.0s - 17 rounds
  ✓ PASS (17 rounds, 98.0s)
Running L6-3: Legacy Code Migration...

======================================================================
Running L6-3: Legacy Code Migration
Task: Migrate the old_codebase.py from Python 2 style to modern Python 3 with type hints, pathlib instead of os.path, and f-strings. Add tests to ensure behavior is preserved.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 60.5s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 60.5s)
Running L7-1: Multi-Module Dependency Resolution...

======================================================================
Running L7-1: Multi-Module Dependency Resolution
Task: Create a package manager simulation with modules A, B, C where B depends on A v1.x, C depends on A v2.x. Implement version resolution logic to detect conflicts and suggest solutions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 60.5s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 60.5s)
Running L7-2: Concurrent Task Queue...

======================================================================
Running L7-2: Concurrent Task Queue
Task: Build a thread-safe task queue system with worker threads, priority levels, retry logic on failure, and graceful shutdown. Include comprehensive tests for concurrency edge cases.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 60.5s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 60.5s)
Running L7-3: DSL Parser and Interpreter...

======================================================================
Running L7-3: DSL Parser and Interpreter
Task: Design a simple domain-specific language (DSL) for mathematical expressions with variables, functions (sin, cos, sqrt), and implement a parser and interpreter. Include tests for complex expressions.
======================================================================

[cleanup] Removed .agent_workspace
[cleanup] Removed .agent_context

✗ FAIL - 67.8s - 1 rounds
Failure mode: unknown_failure
  ✗ FAIL (1 rounds, 67.8s)

================================================================================
FINAL RESULTS: 40/75 passed (53.3%)
================================================================================

Results by level:
  L3: 8/15 (53.3%)
  L4: 10/15 (66.7%)
  L5: 5/15 (33.3%)
  L6: 10/15 (66.7%)
  L7: 7/15 (46.7%)
